Rate limiter and indexing added